<resources>
    <string name="app_name">Viajes</string>
    <string name="actividades">Actividades</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pases">Pases</string>
    <string name="mapa">Mapa</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="buttonretorno">volver</string>
    <string name="buttonir">suscribirte</string>
    <string name="buttontoast">toast</string>
    <string name="hintnombre">Nombre</string>
    <string name="buttoncompartir">Compartir</string>
    <string name="title_main_actividad">Actividades</string>
    <string name="title_activity_main_menu_informacion">Menu ciudad</string>
    <string name="title_activity_donde_comer">Donde Comer</string>
    <string name="donde_dormir">Donde dormir</string>
    <string name="transporte">Como moverse</string>
    <string name="donde_comer">Donde Comer</string>
    <string name="recomendados">Recomendados</string>
    <string name="todo">TODO</string>
    <string name="lugar">( LUGAR )</string>
    <string name="ocio">"Donde Descansar"</string>
    <string name="title_activity_main_dormir">MainActivity_dormir</string>
    <string name="title_activity_main_comida">MainActivity_comida</string>
    <string name="title_activity_main_transporte">MainActivity_transporte</string>
    <string name="title_activity_main_recomendado">MainActivity_recomendado</string>
    <string name="title_activity_main_ocio">MainActivity_ocio</string>


</resources>