<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity_menu_informacion"
    tools:showIn="@layout/activity_menu_informacion">

    <ImageButton
        android:id="@+id/ibOcio"
        android:layout_width="169dp"
        android:layout_height="130dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862"
        app:srcCompat="@drawable/ocio"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/ibTransporte"
        android:layout_width="169dp"
        android:layout_height="160dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/transporte"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/ibDormir"
        android:layout_width="169dp"
        android:layout_height="160dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        app:srcCompat="@drawable/hoteles"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/ibActividades"
        android:layout_width="169dp"
        android:layout_height="160dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@drawable/actividades"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/ibComer"
        android:layout_width="169dp"
        android:layout_height="160dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/comida"
        tools:targetApi="o" />
        app:srcCompat="@drawable/comida" />

    <ImageButton
        android:id="@+id/ibRecomendados"
        android:layout_width="169dp"
        android:layout_height="130dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862"
        app:srcCompat="@drawable/recomendado"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/ibInstagram"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/instagram" />

    <ImageButton
        android:id="@+id/ibFacebook"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/ibTwitter"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/twitter" />

    <ImageButton
        android:id="@+id/ibPinterest"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/pinterest" />

    <TextView
        android:id="@+id/tvRecomendados"
        android:layout_width="170dp"
        android:layout_height="19dp"
        android:fontFamily="casual"
        android:text="@string/recomendados"
        android:textAlignment="center"
        android:textColor="#0F254E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/tvComer"
        android:layout_width="170dp"
        android:layout_height="19dp"
        android:fontFamily="casual"
        android:text="@string/donde_comer"
        android:textAlignment="center"
        android:textColor="#0F254E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/tvOcio"
        android:layout_width="170dp"
        android:layout_height="19dp"
        android:fontFamily="casual"
        android:text="@string/ocio"
        android:textAlignment="center"
        android:textColor="#0F254E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/tvActividad"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:fontFamily="casual"
        android:text="@string/actividades"
        android:textAlignment="center"
        android:textColor="#0F254E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <TextView
        android:id="@+id/tvTransporte"
        android:layout_width="170dp"
        android:layout_height="19dp"
        android:fontFamily="casual"
        android:text="@string/transporte"
        android:textAlignment="center"
        android:textColor="#0F254E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/tvLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/lugar"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/tvDormir"
        android:layout_width="170dp"
        android:layout_height="19dp"
        android:fontFamily="casual"
        android:text="@string/donde_dormir"
        android:textAlignment="center"
        android:textColor="#0F254E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <ImageButton
        android:id="@+id/ibatras"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/botonizq" />

</android.support.constraint.ConstraintLayout>